--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,8 +12,8 @@ html {
 }
 
 body {
+    font-family: "Lato", sans-serif;
     font-family: "Poppins", sans-serif;
-    font-family: 'Lato', sans-serif;
 }
 
 /* Common */
@@ -126,11 +126,11 @@ a {
 }
 
 .hero .sub-title {
-    color: #687690;
     font-size: 1.8rem;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.01em;
+    color: #687690;
 }
 
 .hero .title {
